@@ -14,6 +14,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 - [API_PARSER] [BLACKBERRY_CYLANCE] last_api_call was not correctly updated
 - [API_PARSER] [BLACKBERRY_CYLANCE] Prevent last_api_call from getting stuck more thant 24h in the past
 - [API_PARSER] [THREADS] Don't handle signals when code is not ran in main thread (GUI w/ gunicorn case)
+- [API_PARSER] [NETSKOPE] Correctly handle non-2xx status codes returned by API
 - [REPUTATION_CTX] [GUI] Correctly show POST body parameter when selecting POST method
 ### Added
 - [API_PARSER] [PROOFPOINT_TRAP] New API parser Proofpoint TRAP
